<resources>
    <string name="app_name">Calculadora</string>
    <string name="boton_uno">1</string>
    <string name="boton_dos">2</string>
    <string name="boton_tres">3</string>
    <string name="boton_cuatro">4</string>
    <string name="boton_cinco">5</string>
    <string name="boton_seis">6</string>
    <string name="boton_siete">7</string>
    <string name="boton_ocho">8</string>
    <string name="boton_nueve">9</string>
    <string name="boton_cero">0</string>
    <string name="boton_suma">+</string>
    <string name="boton_resta">-</string>
    <string name="boton_divicion">/</string>
    <string name="boton_multiplicacion">x</string>
    <string name="boton_exponente">^</string>
    <string name="boton_raiz">√</string>
    <string name="boton_punto">.</string>
    <string name="boton_borrar">CRL</string>
    <string name="boton_igualr">=</string>
    <string name="uno">1</string>
</resources>