<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="70">

        <EditText
            android:id="@+id/etVisor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:textSize="40sp" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_siete"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_ocho"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_nueve"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnPor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_multiplicacion"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_cuatro"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_cinco"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_seis"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_resta"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_uno"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_dos"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_tres"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_suma"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_cero"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="10"
                android:text="@string/boton_igualr"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnEntre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:text="@string/boton_divicion"
                android:textSize="40sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>